<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11008800"
    android:orientation="vertical"
    android:weightSum="4">


    <ImageView
        android:id="@+id/icon"
        style="@style/ThemeOverlay.OffChatcon"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:contentDescription="@string/desc_offchat_lockup"
        android:src="@drawable/ic_with_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon">


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/phone_title_text"

            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.MyTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:visibility="gone"
            android:weightSum="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phoneAuthFields">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneAuthFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_info_phone_auth"
                android:textColor="@color/colorPrimaryDark" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <Spinner

                        android:id="@+id/countryCodeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:layout_margin="5sp"
                        android:paddingLeft="20sp"
                        android:paddingBottom="5sp"
                        android:paddingTop="5sp"
                        android:paddingRight="20sp"
                        android:background="@drawable/circle_design_white"
                        android:id="@+id/fieldPhoneNumber"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:hint="@string/hint_phone_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/countryCodeSpinner"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText

                    android:id="@+id/fieldVerificationCode"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_weight="1.0"
                    android:background="@drawable/circle_design_white"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number"
                    android:paddingLeft="20sp"
                    android:paddingTop="5sp"
                    android:paddingRight="20sp"
                    android:paddingBottom="5sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/timeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fieldVerificationCode"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintVertical_bias="0.25" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button

                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/buttonStartVerification"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth" />

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/buttonVerifyPhone"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth" />

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/buttonResend"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25sp"
            android:text="@string/verification_phone_info"
            android:theme="@style/ThemeOverlay.MyTextDetail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/verification_phone_charges_info"
            android:textColor="@color/colorPrimaryDark"
            android:textIsSelectable="false"
            android:theme="@style/ThemeOverlay.MyTextDetail" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_margin="10sp"
            android:textColor="#05F80E"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Firebase User ID: 123456789abc" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

