<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/button_pressed_color"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="true"
    android:padding="10sp">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dp_user"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:contentDescription="@string/user_dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/dp_user"
        app:layout_constraintEnd_toEndOf="@+id/dp_user"
        app:srcCompat="@drawable/ic_check_circle_primary_24dp"
        android:contentDescription="@string/todo"
        android:visibility="gone"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:background="@drawable/user_item_design"
        android:orientation="vertical"
        android:paddingBottom="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dp_user"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contactsUserName"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/user_name"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cvuiPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:maxLength="30"
                android:maxLines="1"
                android:minLines="1"
                android:padding="2sp"
                android:text="@string/this_is_message_lenth_of_30"
                android:textColor="#757575"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>